# image_processor

./: CMakeLists.txt  bmp_reader.h  bmp_writer.h  image.cpp  image.h  image_processor.cpp  readme.md
filters/: blur.cpp  blur.h  crop.cpp  crop.h  crystalize.cpp  crystalize.h  edge.cpp  edge.h  filter.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharp.cpp  sharp.h
